fix overflow on mat-dialog-container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -374,7 +374,6 @@ app-task-list {
 
    .cdk-overlay-container .mat-dialog-container .mat-dialog-content {
      display: block;
-     max-width: 660px;
      max-height: 100vh;
      padding: 25px;
 
